--- a/components/apimgt/org.wso2.carbon.apimgt.rest.api.util/pom.xml
+++ b/components/apimgt/org.wso2.carbon.apimgt.rest.api.util/pom.xml
@@ -126,7 +126,11 @@
             <scope>provided</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.wso2.orbit.io.swagger</groupId>
+            <artifactId>swagger-codegen</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
