--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ target
 .idea
 features/apimgt/org.wso2.carbon.apimgt.core.feature/src/main/resources/repository/database/WSO2AM_DB.h2.db
 *.DS_Store
-features/apimgt/org.wso2.carbon.apimgt.gateway.feature/src/main/resources/am#sample#calculator#v1.war
-features/apimgt/org.wso2.carbon.apimgt.rest.api.dcr.feature/src/main/resources/client-registration#v1.war
-features/apimgt/org.wso2.carbon.apimgt.rest.api.publisher.feature/src/main/resources/api#am#publisher#v1.war
-features/apimgt/org.wso2.carbon.apimgt.rest.api.store.feature/src/main/resources/api#am#store#v1.war
+features/apimgt/org.wso2.carbon.apimgt.gateway.feature/src/main/resources/am#sample#calculator#*.war
+features/apimgt/org.wso2.carbon.apimgt.rest.api.dcr.feature/src/main/resources/client-registration#*.war
+features/apimgt/org.wso2.carbon.apimgt.rest.api.publisher.feature/src/main/resources/api#am#publisher#*.war
+features/apimgt/org.wso2.carbon.apimgt.rest.api.store.feature/src/main/resources/api#am#store#*.war
