--- a/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/workflow-admin/jaggery.conf
+++ b/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/workflow-admin/jaggery.conf
@@ -6,7 +6,8 @@
             "401":"/site/pages/error-pages/401.jag",
             "403":"/site/pages/error-pages/403.jag",
             "404":"/site/pages/error-pages/404.jag",
-            "500":"/site/pages/error-pages/500.jag"
+            "500":"/site/pages/error-pages/500.jag",
+            "0":"/site/pages/error-pages/error-page.jag"
          }
     ,
 
